syntax = "proto3";

package kms;

option go_package = "github.com/edgelesssys/constellation/v2/kms/kmsproto";

service API {
    rpc GetDataKey(GetDataKeyRequest) returns (GetDataKeyResponse);
}

message GetDataKeyRequest {
    string data_key_id = 1;
    uint32 length = 2;
}

message GetDataKeyResponse {
    bytes data_key = 1;
}
